# rust-ape

./: .gitignore  Cargo.toml  README.md
.cargo/: config
ape/: Cargo.toml
ape/lit/: channels.lit  feed.lit  patterns.lit  runtime.lit
ape_grammars/: Cargo.toml
ape_grammars/lit/: channels.lit  grammars.lit
ape_macros/: .gitignore  Cargo.toml
ape_macros/lit/: ape.lit  ast.lit  codegen.lit  parser.lit
ape_macros/lit.tests/: compile_tests.lit
ape_macros/lit.tests/bad_macro_syntax/: ambiguous_operators.lit  double_alias.lit  double_code_block.lit  double_guard.lit  empty_macro.lit  empty_postfix.lit  empty_prefix.lit  leading_seq.lit  no_state_declaration.lit  no_type_signature.lit  two_patterns.lit
ape_macros/lit.tests/run_pass/combination/: alternating_repetition.lit  eof.lit
ape_macros/lit.tests/run_pass/simple/: any_pattern.lit  basic_alternation.lit  basic_code_block.lit  basic_delimited_oom_repetition.lit  basic_delimited_zom_repetition.lit  basic_guard.lit  basic_lookahead.lit  basic_negation.lit  basic_oom_repetition.lit  basic_optional.lit  basic_sequence.lit  basic_zom_repetition.lit  eof.lit  runtime_pattern.lit  single_pattern.lit
ape_runtime/: Cargo.toml
ape_runtime/lit/: feed.lit  patterns.lit  runtime.lit
lit/: lib.lit
