[package]
name = "ape"
version = "0.1.0"
authors = ["Isaac van Bakel <ivb@vanbakel.io>"]

[lib]
name = "ape"
path = 'src/lib.rs'
proc-macro = true

[dependencies]
backtracking_iterator = "^0.4.4"
syn = { version = "^0.15.26", features = ["full", "parsing", "proc-macro"] }

[dev-dependencies]
compiletest_rs = "^0.3.18"
proc-macro2 = "^0.4.25"
ape_runtime = { version = "^0.1", path = "../ape_runtime" }

