[package]
name = "ape_macros"
version = "0.1.0"
authors = ["Isaac van Bakel <ivb@vanbakel.io>"]

[lib]
name = "ape_macros"
path = 'src/lib.rs'
proc-macro = true

[dependencies]
backtracking_iterator = "^0.4.4"
syn = { version = "^0.15.26", features = ["full", "parsing"] }
quote = "*"
proc-macro2 = "^0.4.29"

[dev-dependencies]
compiletest_rs = "^0.3.18"
matches = "^0.1.8"
ape = { version = "^0.1", path = "../ape" }


